--- a/public/assets/sass/errors.scss
+++ b/public/assets/sass/errors.scss
@@ -24,7 +24,7 @@ body {
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         background-color: #222;
-        padding: 20px 10px;
+        padding: 68px 92px;
         border-radius: 32px;
     }
 }
